plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.4'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}
ext {
    testcontainers = "1.17.5"
    mapstruct = "1.5.3.Final"

}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation "org.mapstruct:mapstruct:${mapstruct}"
    implementation 'org.liquibase:liquibase-core'
    implementation 'com.codeborne:selenide:6.12.3'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    implementation 'org.jsoup:jsoup:1.15.4'


    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstruct}"
    testImplementation "org.testcontainers:postgresql:${testcontainers}"
    testImplementation "org.testcontainers:junit-jupiter:${testcontainers}"
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

test {
    useJUnitPlatform()
}